--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="checkboxAll/index.html">checkboxAll</a>
+    <a href="checkboxAll/check-all.html">checkboxAll</a>
 </body>
 
 </html>
