--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Check Box All</title>
 </head>
 
 <body>
     <a href="checkboxAll/check-all.html">checkboxAll</a>
+    <a href="tab/tab.html">tab</a>
+
 </body>
 
 </html>
