--- a/tab/tab.html
+++ b/tab/tab.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div class="tab-container" data-tabs>
+        <div class="tab-container" data-tabsIndex="1">
             <div class="tab-list" data-tablist>
                 <div class="tab-item active" data-tab="1">Music</div>
                 <div class="tab-item" data-tab="2">Movies</div>
@@ -30,7 +30,7 @@
                 <h2>App Content</h2>
             </div>
         </div>
-        <div class="tab-container" data-tabs>
+        <div class="tab-container" data-tabsIndex="2">
             <div class="tab-list" data-tablist>
                 <div class="tab-item active" data-tab="1">Game</div>
                 <div class="tab-item" data-tab="2">Anime</div>
