--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Box All</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Menu</title>
+    <link rel="stylesheet" href="./style.css" />
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <a href="checkboxAll/check-all.html">checkboxAll</a>
-    <a href="tab/tab.html">tab</a>
-
+    <div class="nav-links">
+        <a href="checkboxAll/check-all.html">Checkbox All</a>
+        <a href="tab/tab.html">Tab</a>
+        <a href="slide/index.html">Slide</a>
+    </div>
 </body>
 
 </html>
